@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.5.RELEASE</version>
+        <version>2.3.0.RELEASE</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -15,13 +15,14 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <java.version>13</java.version>
+        <java.version>14</java.version>
     </properties>
 
     <modules>
+        <module>neurchiadvisor-advisory</module>
         <module>neurchiadvisor-common</module>
-        <module>neurchiadvisor-web</module>
-        <module>neurchiadvisor-group</module>
+        <module>neurchiadvisor-identityaccess</module>
+        <module>neurchiadvisor-subscription</module>
     </modules>
 
     <dependencies>
@@ -39,7 +40,26 @@
                 <artifactId>neurchiadvisor-common</artifactId>
                 <version>${project.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.neurchiadvisor</groupId>
+                <artifactId>neurchiadvisor-group</artifactId>
+                <version>${project.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
